fix the highlighting of left nav menu items
the content of a highlighted hashtag link was misaligned vertically,
because the 30px bullet was too tall; limiting the line-height of the
bullet fixes it. n.b. @robbiecarlton

--- a/css/layout.less
+++ b/css/layout.less
@@ -247,6 +247,9 @@ nav {
       font-size: 30px;
       top: 3px;
       position: relative;
+      line-height: 16px;
+      vertical-align: baseline;
+      display: inline-block;
     }
   }
 
